--- a/2sprintcourses.html
+++ b/2sprintcourses.html
@@ -65,7 +65,9 @@
             overflow: hidden;
             transition: transform 0.3s, box-shadow 0.3s;
         }
-        
+        .course-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
         }
         .course-card img {
             width: 100%;
